--- a/02-CSS/homework/responsive-web/package.json
+++ b/02-CSS/homework/responsive-web/package.json
@@ -11,6 +11,6 @@
   "scripts": {
     "less": "less-watch-compiler less css index.less"
   },
-  "author": "",
+  "author": "catellaTech",
   "license": "ISC"
 }
